language-server/src/tests/snapshots/gleam_language_server__tests__action__use_label_shorthand_works_for_nested_calls.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn wibble(arg arg: Int) -> Int { arg }\n\npub fn main() {\n  let arg = 1\n  wibble(wibble(arg: arg))\n}\n "
---
----- BEFORE ACTION

pub fn wibble(arg arg: Int) -> Int { arg }

pub fn main() {
       ▔▔▔▔▔▔▔▔
  let arg = 1
▔▔▔▔▔▔▔▔▔▔▔▔▔
  wibble(wibble(arg: arg))
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
}
↑
 


----- AFTER ACTION

pub fn wibble(arg arg: Int) -> Int { arg }

pub fn main() {
  let arg = 1
  wibble(wibble(arg: ))
}
