language-server/src/tests/snapshots/gleam_language_server__tests__action__use_label_shorthand_works_for_nested_patterns.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble { Wibble(arg: Int, arg2: Wobble) }\npub type Wobble { Wobble(arg: Int, arg2: String) }\n\npub fn main() {\n  let Wibble(arg2: Wobble(arg: arg, arg2: arg2), ..) = todo\n}\n "
---
----- BEFORE ACTION

pub type Wibble { Wibble(arg: Int, arg2: Wobble) }
pub type Wobble { Wobble(arg: Int, arg2: String) }

pub fn main() {
       ▔▔▔▔▔▔▔▔
  let Wibble(arg2: Wobble(arg: arg, arg2: arg2), ..) = todo
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑   
}
 


----- AFTER ACTION

pub type Wibble { Wibble(arg: Int, arg2: Wobble) }
pub type Wobble { Wobble(arg: Int, arg2: String) }

pub fn main() {
  let Wibble(arg2: Wobble(arg: , arg2: ), ..) = todo
}
