language-server/src/tests/snapshots/gleam_language_server__tests__action__wrap_assignment_in_anonymous_function.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let op = op_factory(1, 2, 3)\n}\n\nfn op_factory(a: Int, b: Int, c: Int) -> fn(Int) -> Int {\n  todo\n}\n"
---
----- BEFORE ACTION
pub fn main() {
  let op = op_factory(1, 2, 3)
           ↑                  
}

fn op_factory(a: Int, b: Int, c: Int) -> fn(Int) -> Int {
  todo
}


----- AFTER ACTION
pub fn main() {
  let op = fn(int) { op_factory(1, 2, 3)(int) }
}

fn op_factory(a: Int, b: Int, c: Int) -> fn(Int) -> Int {
  todo
}
