language-server/src/tests/snapshots/gleam_language_server__tests__action__wrap_assignment_value_in_block.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let var = \"value\"\n}"
---
----- BEFORE ACTION
pub fn main() {
  let var = "value"
             ▔▔▔▔↑ 
}


----- AFTER ACTION
pub fn main() {
  let var = {
    "value"
  }
}
